@@ -1,6 +1,8 @@
 package com.ijioio.aes.sandbox.test;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Month;
 import java.util.LinkedHashMap;
@@ -30,16 +32,19 @@ public class MapSerializationTest {
 							@Type(name = "java.lang.Object"), @Type(name = "java.lang.Object") }) //
 			} //
 	)
-
 	public static interface MapSerializationPrototype {
 
 		public static final String NAME = "com.ijioio.test.model.MapSerialization";
 	}
 
+	private Path path;
+
 	private MapSerialization model;
 
 	@BeforeEach
-	public void before() {
+	public void before() throws Exception {
+
+		path = Paths.get(getClass().getClassLoader().getResource("map-serialization.xml").toURI());
 
 		Map<String, String> stringMap = new LinkedHashMap<>();
 
@@ -72,8 +77,7 @@ public class MapSerializationTest {
 		XmlSerializationHandler handler = new XmlSerializationHandler();
 
 		String actual = XmlUtil.write(handler, model);
-		String expected = Files
-				.readString(Paths.get(getClass().getClassLoader().getResource("map-serialization.xml").toURI()));
+		String expected = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
 
 		Assertions.assertEquals(expected, actual);
 	}
@@ -84,7 +88,7 @@ public class MapSerializationTest {
 		XmlSerializationHandler handler = new XmlSerializationHandler();
 
 		MapSerialization actual = XmlUtil.read(handler, MapSerialization.class,
-				Files.readString(Paths.get(getClass().getClassLoader().getResource("map-serialization.xml").toURI())));
+				new String(Files.readAllBytes(path), StandardCharsets.UTF_8));
 		MapSerialization expected = model;
 
 		Assertions.assertEquals(expected.getId(), actual.getId());
