@@ -1,6 +1,8 @@
 package com.ijioio.aes.sandbox.test;
 
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -32,16 +34,19 @@ public class SkipSerializationTest {
 							@Type(name = Type.STRING), @Type(name = Type.STRING) }) //
 			} //
 	)
-
 	public static interface SkipSerializationPrototype {
 
 		public static final String NAME = "com.ijioio.test.model.SkipSerialization";
 	}
 
+	private Path path;
+
 	private SkipSerialization model;
 
 	@BeforeEach
-	public void before() {
+	public void before() throws Exception {
+
+		path = Paths.get(getClass().getClassLoader().getResource("skip-serialization.xml").toURI());
 
 		ArrayList<String> stringList = new ArrayList<>(Arrays.asList("value1", "value2"));
 		Set<String> stringSet = new LinkedHashSet<>(Arrays.asList("value1", "value2"));
@@ -65,7 +70,7 @@ public class SkipSerializationTest {
 		XmlSerializationHandler handler = new XmlSerializationHandler();
 
 		SkipSerialization actual = XmlUtil.read(handler, SkipSerialization.class,
-				Files.readString(Paths.get(getClass().getClassLoader().getResource("skip-serialization.xml").toURI())));
+				new String(Files.readAllBytes(path), StandardCharsets.UTF_8));
 		SkipSerialization expected = model;
 
 		Assertions.assertEquals(expected.getId(), actual.getId());
